--- a/new.html
+++ b/new.html
@@ -27,6 +27,14 @@
     <div class="division-block" style="display: none;">
         <h2>heading of Division Block</h2>
         <p>This block can be toggled on and off.</p></div>
+        <br>
+        <div class="tutorial">
+            <h2>CSS Effects</h2>
+            <p>Click the button below to apply CSS effects to this paragraph.</p>
+            <button onclick="effect()">Apply CSS Effects</button>
+        </div>
+
+        </div>
     <script>
         let shiva = false;
         function f(){
@@ -57,6 +65,16 @@
             } else {
                 div.style.display = 'none';
             }
+        }
+        function effect(){
+            let p=document.querySelector('.tutorial');
+            p.style.backgroundColor = "yellow";
+            p.style.color = "red";
+            p.style.fontSize = "20px";
+            p.style.fontWeight = "bold";
+            p.style.border = "2px solid black";
+            p.style.padding = "10px";
+            p.style.textAlign = "center";
         }
     </script>
     
