--- a/link.html
+++ b/link.html
@@ -10,6 +10,7 @@
             background-color: lightgreen;
         }
         .container2{
+            height: 119px;
             display:flow-root;
             background-color: lightblue;
         }
@@ -23,9 +24,8 @@
     <div class="container">
         <h1>Shiva</h1>
         <p>Welcome this is a paragraph</p></div>
-    <br><br>
     <div class="container2">
-        <h2>Shiva 2</h2>
+        <h1>Shiva 2</h1>
         <p>This is a paragraph</p></div><br><br>
     <a href="https://www.google.com">Link</a><br><br>
     <button onclick="f()">Click Me</button><br><br>
@@ -36,7 +36,7 @@
     <script>
         function f() {
             let a = document.getElementsByTagName('a');
-            a[0].setAttribute('href','https://amazon.com');
+            a[0].setAttribute('href','https://flipkart.com');
         }
         function g(){
             const b=document.querySelectorAll('.container2');
