--- a/event2.html
+++ b/event2.html
@@ -9,8 +9,6 @@
             background-color: aqua;
             height:200px;
             width:200px;
-
-
         }
     </style>
 </head>
@@ -24,32 +22,20 @@
     hello
     <p id="output">hello</p>
     <script>
-        <!-- 
-            document.getElementById('submit').addEventListener('contextmenu',
-            function(){
-                const name=document.getElementById('name').value;
-                const age=document.getElementById('age').value;
-                const email=document.getElementById('email').value;
-                document.getElementById('output').innerHTML=`
-                <p>Name:${name}</p>
-                <p>Age:${age}</p>
-                <p>Email:${email}</p>
-                `;
-            });
-            -->
-        document.body.addEventListener("mousemove",function(event){
-            const x=event.clientX;
-            const y=event.clientY;
-            const output=document.getElementById("output");
-            output.textContent=`X:${x}, Y:${y}`;
-        });
-        document.body.addEventListener("keydown",function(event){
-            document.body.style.backgroundColor="lightgreen";
-        })
-        document.body.addEventListener("keypress",function(event){
-            document.body.style.backgroundColor="purple";
-            document.body.style.color="red"
-        })
+        document.body.addEventListener("keydown",f);
+        function f(){
+            let c={"w":"white","b":"blue","g":"green","r":"red"};
+            let key=event.key.toLowerCase();
+            if (c[key]){
+                document.body.style.backgroundColor=c[key];
+
+            }
+            else{
+                alert("invalid key! use 'w','b','g', or 'r'.");
+            }   
+         }
+        
+
         
 
 
